# WiDS-Datathon-Team-25

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/raw/: Data Dictionary.xlsx
notebooks/machine_learning/: je_xgboost.ipynb
notebooks/preprocessing/: je_preprocessing.ipynb
notebooks/statistical testing/: categorical_stat_test.ipynb  lb_quant_stat_test.ipynb  quant_stat_test.ipynb
notebooks/visualizations/: je_bar_charts.ipynb  je_percentages.ipynb  je_pie_charts.ipynb  lb_adhd_sex_visual.ipynb
statistical testing/: categorical_stat_test.py  quant_stat_test.py
