[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wids_datathon_2025"
version = "0.0.1"
description = "Building a model to predict both an individuals SEX and ADHD diagnosis."
authors = [
  { name = "MIT_WiDS_Team 25" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["wids_datathon_2025"]
force_sort_within_sections = true
